--- a/src/pages/layout/Layout.scss
+++ b/src/pages/layout/Layout.scss
@@ -8,7 +8,7 @@
     color: white;
     font-size: 18px;
     text-align: center;
-    line-height: 31px
+    line-height: 31px;
   }
   .header {
     padding-left: 5px;
