--- a/src/pages/layout/Layout.scss
+++ b/src/pages/layout/Layout.scss
@@ -4,7 +4,7 @@
   .logo {
     height: 32px;
     margin: 16px;
-    background: rgba(255, 255, 255, 0.3);
+    background: #ff9900;
     color: white;
     font-size: 18px;
     text-align: center;
@@ -14,7 +14,6 @@
     padding-left: 5px;
     padding-right: 10px;
     display: flex;
-    //border: 1px solid red;
     justify-content: space-between;
     .menu {
       padding: 0 10px;
