feat: update layout

--- a/src/pages/food/Food.scss
+++ b/src/pages/food/Food.scss
@@ -9,11 +9,11 @@
 }
 
 .star {
-  color: #ccc;
+  color: #fff;
   transition: color 0.3s;
   margin-right: 2px;
 }
 
 .star.filled {
-  color: #f8d32d; /* 高亮颜色 */
+  color: #696165; /* 高亮颜色 */
 }
