--- a/src/pages/layout/Layout.scss
+++ b/src/pages/layout/Layout.scss
@@ -4,21 +4,23 @@
   .logo {
     height: 32px;
     margin: 16px;
-    background: #ff9900;
-    color: white;
+    background: #fff;
+    color: #ffb7cc;
     font-size: 18px;
     text-align: center;
     line-height: 31px;
+    border-radius: 10px; /* 控制角的圆角程度，可以根据需要调整 */
   }
   .header {
     padding-left: 5px;
     padding-right: 10px;
     display: flex;
     justify-content: space-between;
+    background: #ffb7cc;
     .menu {
       padding: 0 10px;
-      background: #001529;
       color: white;
+      font-size: 16px;
     }
     .trigger {
       padding: 0px;
@@ -32,4 +34,8 @@
       }
     }
   }
+}
+
+.ant-layout-sider-children {
+  background: #ffb7cc;
 }
