--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -1,7 +1,7 @@
 .login {
   width: 100vw;
   height: 100vh;
-  background-color: #369;
+  background-color: #ffb7cc;
   display: flex;
   justify-content: center;
   align-items: center;
